# FinOpsEngine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  VERSIONING.md  pyproject.toml  requirements.txt
automation/: README.md  finops-nightly.yml
docs/: _add_actuals_callout.py  _update_deck.py  build_overview_pptx.py  faq.md  finops-engine-overview.pptx  methodology.md  troubleshooting.md
samples/: README.md  index.html
samples/enriched/: contoso-app-team-20260101.html  contoso-app-team-20260101.md  enriched-20260101.csv  enriched-20260101.html  enriched-20260101.md
samples/hidden-waste/: hidden-waste-20260101.csv  hidden-waste-20260101.html  hidden-waste-20260101.md
samples/peak-rightsizing/: contoso-app-prod-peak-rightsizing-20260101.csv  peak-rightsizing-combined-20260101.html  peak-rightsizing-combined-20260101.md
samples/ri-coverage/: ri-coverage-20260101.csv  ri-coverage-20260101.html  ri-coverage-20260101.md  ri-shortlist-20260101.html  ri-shortlist-20260101.md
tests/: README.md  conftest.py  test_context_enricher.py  test_context_enricher_owner_routing.py  test_context_enricher_plan_only.py  test_finops_currency.py  test_hidden_waste.py  test_hidden_waste_devtest.py  test_hidden_waste_paas.py  test_rightsizing_peak.py
tools/: finops_currency.py  html_sink.py  tag_keys.py
tools/context-enricher/: README.md  context_enricher.py
tools/hidden-waste/: README.md  hidden_waste.py  workbook-hidden-waste.json
tools/ri-coverage/: README.md  ri_coverage.py  workbook-ri-coverage.json
tools/rightsizing-peak/: README.md  rightsizing_peak.py  (+1 more)
(+18 files in other folders)
